   * Added text_alignment= key to [story][part] to specify horizonal alignment of
     text.
   * [set_variable] now supports abs= (absolute value), power= (raise to
     power) and root= (extracts root, 'square' is the only value currently
     supported) keys
   * Individual [terrain_graphics] rotations can now be skipped entirely by
     using "skip" in the rotations= list.
 * Miscellaneous and bug fixes:
   * A new way to make units invulnerable for debugging: select the unit and type
     ";unit invulnerable=yes". This method operates by decreasing the opponent's hit
     chance to zero: as a result, it doesn't slow down damage prediction unlike the
     "increase HP to ridiculous levels" method.
   * The ;choose_level command now works in the tutorial and in [test] scenarios
   * Fixed a stray ; character appearing pre-entered in the command console.
   * Fixed bug in wesnothd that was causing server crashes if game with
     multiple network and local players was ran.
   * Added a tab to run the wmlxgettext tool to GUI.pyw
   * Fixed problem with Spectre's hitpoint bar positioning.
   * Fixed crash when unit with planned actions is killed before those actions are
     completed (bug #20071)
   * Show correct number of attacks in case of swarm weapon special (bug #24978)
   * Fixed bug that icons of buttons under the minimap disappeared when the
     player opened and closed a menu.
   * Correct unit recall count in statistics when undoing a unit recall (bug #25060)
   * Add tip to recall units instead of recruiting them if costs exceed 20 gold (recruitment costs)
   * Resolve sides in map editor not having a proper side number and subsequently
     causing a crash upon editing (bug #25093)
   * Avoid rare cases of mini-map producing a divide-by-zero error (bug #25155)
   * [filter_vision]: fix bug of filter not matching own/allied hidden units
   * Prevent crash on quitting scenario with planned recruits present (bugs #24022/25193)

Version 1.13.5: